--- a/gb/25/7/5/n14545455.md
+++ b/gb/25/7/5/n14545455.md
@@ -38,16 +38,12 @@
 </div>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/3/n13620188.md#1">中共官媒否认俄军枪杀四名中国留学生后删文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/13/n13802020.md#1">俄罗斯将军赞中国无人机帮助俄军 大疆急发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/9/n13841959.md#1">网传乌克兰士兵捕获俄军使用的大疆无人机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243341.md#1">中共党魁访欧前 俄媒曝中企在俄造无人机</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532074.md#1">台风季将至 台消防署盘点184处易成灾害孤岛地区</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534581.md#1">台风汛期来临 政院灾防办：导入AI精准预警淹水区</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536724.md#1">台风圣帕生成 台气象署预估朝日本方向移动</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543720.md#1">台风木恩生成 气象专家：续观察菲东热带扰动</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/19/n11123506.md#1" target="_blank">林辉：朱德曾被德国驱逐 效力中共晚景凄凉</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/26/n10811962.md#1" target="_blank">他曾接近失明 一位程序员绝处逢生后的告白</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/11/n10047238.md#1" target="_blank">曾伯炎：右派，在中国古拉格的生死劫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
